--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "clsx": "^1.2.1",
     "macro-css": "^1.0.5",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-native-svg": "^12.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
